--- a/A. Starter/1. Hosting Landing Page/index.html
+++ b/A. Starter/1. Hosting Landing Page/index.html
@@ -40,7 +40,7 @@
     <section id="features" class="container pb-5">
 
         <p class="fs-5 text-dark mb-0 mt-md-5 mt-4 text-center">You can lean on us</p>
-        <h2 class="text-center display-4 mb-md-5 mb-3">Our server are robust</h2>
+        <h2 class="text-center display-4 mb-md-5 mb-3">Our servers are robust.</h2>
 
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center pt-4 pb-5 mt-md-5 mt-0">
 
@@ -49,19 +49,19 @@
                     <img src="ressources/chat.svg" alt="chat icon" class="col-4">
                 </div>
                 <h2 class="fs-4">Lorem, ipsum dolor.</h2>
-                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut provident sit quia
-                    illo. Corporis, quam.</p>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium error neque,
+                    sit quibusdam recusandae nam?</p>
             </div>
+
 
             <div class="d-flex flex-column align-items-center">
                 <div class="row justify-content-center">
                     <img src="ressources/coding.svg" alt="coding icon" class="col-4">
                 </div>
                 <h2 class="fs-4">Lorem, ipsum dolor.</h2>
-                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut provident sit quia
-                    illo. Corporis, quam.</p>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium error neque,
+                    sit quibusdam recusandae nam?</p>
             </div>
-
 
 
             <div class="d-flex flex-column align-items-center">
@@ -69,14 +69,82 @@
                     <img src="ressources/transfer.svg" alt="transfer icon" class="col-4">
                 </div>
                 <h2 class="fs-4">Lorem, ipsum dolor.</h2>
-                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut provident sit quia
-                    illo. Corporis, quam.</p>
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium error neque,
+                    sit quibusdam recusandae nam?</p>
+            </div>
+
+        </div>
+
+    </section>
+
+
+    <!-- Section 2 dual content -->
+
+
+    <section class="border-wrapper border-top pb-5 mb-5">
+
+        <div class="container">
+
+            <h2 class="text-center display-4 mt-md-5 mt-4">Quality or nothing</h2>
+            <p class="fs-5 text-dark mb-md-5 mb-4 text-center">Our rewards.</p>
+
+            <div class="row g-3 row-cols-1 row-cols-lg-2">
+
+                <div>
+                    <div class="p-5 text-white bg-dark rounded-3 shadow">
+                        <h2>Best Hosting Award 2022 🏆</h2>
+                        <!-- lorem15 -->
+                        <p class="mt-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus adipisci
+                            consectetur unde debitis ab facilis.</p>
+                        <a class="btn btn-outline-light" href="#">Look at the ranking</a>
+                    </div>
+                </div>
+
+
+                <div>
+                    <div class="p-5 text-dark bg-warning rounded-3 shadow">
+                        <h2>Fastest servers 💨</h2>
+                        <!-- lorem20 -->
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus adipisci consectetur unde
+                            debitis ab facilis.</p>
+                        <a class="btn btn-outline-light" href="#">Look at the ranking</a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="p-5 text-white bg-primary rounded-3 shadow">
+                        <h2>Best support 2019/2020 ☎️</h2>
+                        <!-- lorem30 -->
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus adipisci consectetur unde
+                            debitis ab facilis.</p>
+                        <a class="btn btn-outline-light" href="#">Look at the ranking</a>
+                    </div>
+                </div>
+
+                <div>
+                    <div class="p-5 text-dark bg-light rounded-3 shadow">
+                        <h2>Groundbreaking low prices 💸</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus adipisci consectetur unde
+                            debitis ab facilis.</p>
+                        <a class="btn btn-outline-dark" href="#">Look at the ranking</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
 
 
-    <!-- Section 2 dual content -->
+    <!-- Striped Section -->
+
+    <section class="bg-dark py-5 mt-5 d-flex flex-column justify-content-center align-items-center">
+        <h1 class="text-light display-3">It's now or never.</h1>
+        <p class="text-light fs-4 my-0">You can do it.</p>
+        <a href="#" class="btn btn-light btn-lg mt-4">Boost your career 🔥</a>
+    </section>
+
+
+    <!-- Projects Section -->
 
     <section class="border-bottom">
 
@@ -165,15 +233,16 @@
 
     </section>
 
+
     <!-- Section Pricing Tables -->
+
 
     <section id="pricing" class="container">
 
-        <h1 class="text-center text-dark display-3 mt-5">Check our pricing tables</h1>
-        <p class="text-center fs-4 mb-4">We suit your needs</p>
+        <h1 class="text-center text-dark display-3 mt-5">Check our pricing tables.</h1>
+        <p class="text-center fs-4 mb-4">We suit your needs.</p>
 
-        <div class="row justify-content-center row-cols-1 row-cols-2 row-cols-lg-3 p-md-5 p-0">
-
+        <div class="row justify-content-center row-cols-1 row-cosl-md-2 row-cols-lg-3 p-md-5 p-0">
 
             <div class="mb-4" style="min-height: 400px">
                 <div class="p-2 card bg-dark text-light h-100">
@@ -247,7 +316,6 @@
     </section>
 
 
-
     <!-- Parallax Section -->
 
     <section class="parallax-section d-flex justify-content-center align-items-center">
@@ -256,9 +324,11 @@
         </h2>
     </section>
 
+
     <!-- Contact -->
 
-    <Section class="border-top pb-5 mb-5 container">
+    <section class="border-top pb-5 mb-5 container">
+
         <h2 class="text-center display-4 my-md-5 my-4">Contact-us</h2>
 
         <form>
@@ -270,18 +340,16 @@
             </div>
 
             <div class="form-floating mb-3">
-                <textarea class="form-control" placeholder="your message" id="floatTxtArea"
-                    style="height: 100px;"></textarea>
-                <label for="floatTxtArea">your message</label>
+                <textarea class="form-control" placeholder="Your message" id="floatTxtArea"
+                    style="height: 100px"></textarea>
+                <label for="floatTxtArea">Your message</label>
             </div>
+
+            <button class="btn btn-primary">Submit</button>
         </form>
-        <button class="btn btn-primary">Submit</button>
 
-    </Section>
+    </section>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
 
     <!-- Footer -->
 
@@ -289,6 +357,15 @@
         <a href="#" class="mb-3 mb-md-0 text-muted text-decoration-none lh-1">© 2021 Company, Inc</a>
     </footer>
 
+
+
+
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
-</html>
+</html>*
